--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,37 @@
  *= require_tree .
  *= require_self
  */
+
+// Custom bootstrap variables must be set or imported *before* bootstrap.
+@import "bootstrap";
+
+body {
+  width: 100%;
+  height: 100%;
+}
+
+.main-background {
+  width: 100%;
+  height: 100vh;
+  background-image: url("home-page.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.dark-overlay {
+  top: 0;
+  left: 0;
+  z-index: 2;
+  width: 100%;
+  opacity: 0.5;
+  height: 100vh;
+  position:fixed;
+  background-color: #000000;
+}
+
+.logo {
+  position: absolute;
+  z-index: 3;
+}
