Redesign authentication page

--- a/app/views/layouts/_auth_background.html.erb
+++ b/app/views/layouts/_auth_background.html.erb
@@ -1,7 +1,7 @@
-<div class="main-background">
+<%# <section class="main-background">
   <div class="logo">
     <%= image_tag("white-logo.png")%>
-  </div>
-</div>
-<div class="dark-overlay">
-</div>
+  <%#</div>
+</section>
+<section class="dark-overlay">
+</section> %>
