--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
 
 // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";
+@import "toastr";
 
 body {
   width: 100%;
@@ -32,7 +33,7 @@ body {
   background-size: cover;
 }
 
-.dark-overlay {
+.body {
   top: 0;
   left: 0;
   z-index: 2;
@@ -43,7 +44,8 @@ body {
   background-color: #000000;
 }
 
-.logo {
-  position: absolute;
-  z-index: 3;
+.logo img{
+  height: 30%;
+  width: 300px;
+  margin: 1% 0 0 2%;
 }
