--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,9 +3,27 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 #register-form {
-  position: absolute;
-  top: 35%;
-  z-index: 3;
-  right: 25%;
-  color: white;
+  width: 35%;
+  margin: 5% auto;
+  min-height: 520px;
+  overflow: auto;
+  padding: 1% 2%;
+  border-radius: 5px;
+  box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
+  // box-shadow: 0 2px 6px 0;
+
+  h2 {
+    font-size: 2.5rem;
+  }
+
+  input[type=number]::-webkit-inner-spin-button, 
+  input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none; 
+    margin: 0; 
+  }
+
+  .register-btn {
+    display: block;
+    margin: auto;
+  }
 }
