--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,34 +18,14 @@
 @import "bootstrap";
 @import "toastr";
 
-body {
-  width: 100%;
-  height: 100%;
+html, body {
+  font-family: 'Montserrat', sans-serif;
 }
 
-.main-background {
-  width: 100%;
-  height: 100vh;
-  background-image: url("home-page.jpg");
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
+.logo img {
+  width: 200px;
 }
 
-.body {
-  top: 0;
-  left: 0;
-  z-index: 2;
-  width: 100%;
-  opacity: 0.5;
-  height: 100vh;
-  position:fixed;
-  background-color: #000000;
-}
-
-.logo img{
-  height: 30%;
-  width: 300px;
-  margin: 1% 0 0 2%;
+.custom-nav {
+  padding: 0.8rem 3rem;
 }
