--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,20 +1,19 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import 'base';
 
-#register-form {
-  width: 35%;
-  margin: 5% auto;
-  min-height: 520px;
-  overflow: auto;
-  padding: 1% 2%;
-  border-radius: 5px;
-  box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
-  // box-shadow: 0 2px 6px 0;
+.form-control {
+  box-shadow: inset 0 2px 4px 0 hsla(0, 0%, 0%, 0.08);
 
-  h2 {
-    font-size: 2.5rem;
+  &:focus {
+    border-color: #ced4da;
+    box-shadow: inherit;
   }
+}
+
+.register-form {
+  @include  auth-form(1% 2% 2%);
 
   input[type=number]::-webkit-inner-spin-button, 
   input[type=number]::-webkit-outer-spin-button { 
@@ -23,7 +22,27 @@
   }
 
   .register-btn {
-    display: block;
-    margin: auto;
+    @include buttons;
+  }
+
+  .login-link {
+    @include auth-link;
+  }
+}
+
+.login-form {
+  @include  auth-form(1% 2%);
+
+  .login-btn {
+    @include buttons;
+  }
+
+  .register-link {
+    @include auth-link;
+  }
+
+  .forgot-password {
+    float: right;
+    padding-top: 0.5rem;
   }
 }
