--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,16 +3,18 @@
   <head>
     <title>MoreRecipes</title>
     <%= csrf_meta_tags %>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+
     <% if flash.present? %>
       <script>
-        <% if flash[:success] %>
-          toastr.success($('<span><%= flash[:success] %></span>'))
+        <% if flash[:notice] %>
+          toastr.success($('<span><%= flash[:notice] %></span>'))
         <% end %>
         <% if flash[:error] %>
           toastr.error($('<span><%= flash[:error] %></span>'))
@@ -20,12 +22,10 @@
       </script>
     <% end %>
 
-    <div class="logo">
-      <%= image_tag("black-logo.png")%>
-    </div>
+    <%= render 'layouts/navbar' %>
 
-    <h2> <%= flash[:error] %></h2>
-    
-    <%= yield %>
+    <div class="main-content">
+      <%= yield %>
+    </div>
   </body>
 </html>
