feat(recipesPage): add UI for recipes page
- seed data for categories
- add UI for recipes
 - add UI for categories

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@
 // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";
 @import "toastr";
+@import 'ionicons';
 
 html, body {
   font-family: 'Montserrat', sans-serif;
