--- a/app/assets/stylesheets/partials/_variables.scss
+++ b/app/assets/stylesheets/partials/_variables.scss
@@ -5,4 +5,7 @@
 // Colors
 $primary-color: #9a3325;
 $secondary-color: #5f64af;
-$grey-1: #424242;
+$grey: #424242;
+$light-grey: #808080;
+$dark : #343a40;
+$red: #ff0000;
