--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,1 +1,12 @@
-<h1>Recipes Page</h1>
+<div class="recipes-wrapper">
+  <div class="recipe-item">
+    <%= image_tag("categories/potatoes.jpg") %>
+    <div class="recipe-desc">
+      <h3>Lemon roast potatoes</h3>
+      <div class="actions">
+        <span class="fav"><i class="icon ion-heart"></i> &nbsp;23 favourites</span>
+        <span class="reviews"><i class="icon ion-chatboxes"></i> &nbsp;23 reviews</span>
+      </div>
+    </div>
+  </div>
+</div>
