--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -1,3 +1,60 @@
 // Place all the styles related to the recipes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@import 'base';
+
+.recipes-wrapper {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  padding: 2% 5%;
+
+  .recipe-item {
+    margin: 5px;
+
+    img {
+      width: 100%;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+  }
+
+  .recipe-desc {
+    h3 {
+      cursor: pointer;
+      margin-bottom: 0;
+      padding-top: 10px;
+      text-align: center;
+      font-family: 'PT Sans Narrow', sans-serif;
+    }
+
+    i {
+      font-size: 1.5rem;
+      vertical-align: middle;
+      color: $light-grey;
+      cursor: pointer;
+    }
+    
+    .fav {
+      float: left;
+
+      i {
+        &:hover {
+          color: $red;
+        }
+      }
+    }
+
+    .reviews {
+      float: right;
+
+      i {
+        &:hover {
+          color: $dark;
+        }
+      }
+    }
+  }
+}
+
