--- a/app/assets/stylesheets/partials/_mixins.scss
+++ b/app/assets/stylesheets/partials/_mixins.scss
@@ -17,18 +17,18 @@
 }
 
 @mixin buttons {
-  display: block;
-  margin: auto;
-  padding: 0.5rem 2rem;
-  color: #ffffff;
-  background-color: $primary-color;
-  border-color: $primary-color;
+  display: block !important;
+  margin: auto !important;
+  padding: 0.5rem 2rem !important;
+  color: #ffffff !important;
+  background-color: $primary-color !important;
+  border-color: $primary-color !important;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
 
-  &:hover, &:focus {
-    color: $grey;
-    background-color: #ffffff;
-    box-shadow: none;
+  &:hover {
+    color: $grey !important;
+    background-color: #ffffff !important;
+    box-shadow: none !important;
   }
 }
 
