--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -6,12 +6,13 @@
 
 .recipes-wrapper {
   display: grid;
-  grid-gap: 20px;
+  grid-gap: 40px;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   padding: 2% 5%;
 
   .recipe-item {
     margin: 5px;
+    margin-bottom: 20px;
 
     img {
       width: 100%;
@@ -58,3 +59,8 @@
   }
 }
 
+.add-recipe-btn {
+  @include buttons;
+  float: right;
+  margin-right: 7px;
+}
