--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,7 +18,15 @@
     <% end %>
     <% if logged_in? %>
       <li class="nav-item">
-        <%= link_to "Logout", logout_path, class: "nav-link" %>
+        <%= link_to "My Recipes", my_recipes_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Hi, <%= current_user.username.capitalize %>
+        </a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+          <%= link_to "Logout", logout_path, class: "dropdown-item" %>
+        </div>
       </li>
     <% end %>
     </ul>
