--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -14,8 +14,8 @@
       <%= f.email_field :email, class: "form-control" %>
     </div>
     <div class="form-group">
-      <%= f.label :phone_number %>
-      <%= f.number_field :phonenumber, class: "form-control" %>
+      <%= f.label :phone_number, "Phone Number" %>
+      <%= f.number_field :phone_number, class: "form-control" %>
     </div>
     <div class="form-group">
       <%= f.label :password %>
