feat(recipesPage): add functionality for adding new recipe

--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -4,9 +4,14 @@
 
 @import 'base';
 
-.add-recipe-modal{
+.add-recipe-modal {
   .modal-content {
     padding: 0 0.5rem;
+  }
+
+  .modal-body {
+    max-height: 700px;
+    overflow: scroll;
   }
 }
 
