--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,6 +18,9 @@
     <% end %>
     <% if logged_in? %>
       <li class="nav-item">
+        <%= link_to "Categories", categories_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
         <%= link_to "My Recipes", my_recipes_path, class: "nav-link" %>
       </li>
       <li class="nav-item dropdown">
