--- a/app/views/recipes/my_recipes.html.erb
+++ b/app/views/recipes/my_recipes.html.erb
@@ -23,7 +23,8 @@
       <% end %>
     </div>
   <% else %>
-    <h1 class="no-recipes text-center">You have not added any recipes yet</h1>
+    <h1 class="no-recipes text-center">You have not added any recipes.</h1>
+    <h3 class="text-center">¯\_(ツ)_/¯</h3>
   <% end %>
 </div>
 
