--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -4,6 +4,11 @@
 
 @import 'base';
 
+.no-recipes {
+  padding-top: 2%;
+  font-size: 2rem;
+}
+
 .add-recipe-modal {
   .modal-content {
     padding: 0 0.5rem;
