add icons for editing and deleting a recipe on the recipe image

--- a/app/assets/stylesheets/partials/_mixins.scss
+++ b/app/assets/stylesheets/partials/_mixins.scss
@@ -40,3 +40,20 @@
     text-decoration: none;
   }
 }
+
+@mixin text-link-style {
+  a {
+  color: #000000;
+  text-decoration: none;
+  
+    &:active, &:visited, &:focus, &:hover {
+      color: #000000;
+      text-decoration: none;
+    }
+
+    &:hover {
+      color: $secondary-color;
+      text-decoration: none;
+    }
+  }
+}
