--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -7,25 +7,15 @@
     <div class="recipes-wrapper">
       <% @category_recipes.each do |recipe| %>   
           <div class="recipe-item">
-            <%= image_tag(recipe.recipe_image) %>
-            <div class="overlay">
-              <%= link_to edit_recipe_path(recipe.id) do %>
-                <i class="icon ion-edit"></i>
-              <% end %>
-              <%= link_to recipe_path(recipe.id), method: :delete, data: { confirm: 'Are you sure'} do %>
-                <i class="icon ion-trash-b"></i>
-              <% end %>
+          <%= image_tag(recipe.recipe_image) %>
+          <div class="recipe-desc">
+            <h3><%= recipe.name %></h3>
+            <div class="actions">
+              <span class="fav"><i class="icon ion-heart"></i> &nbsp;23 favourites</span>
+              <span class="reviews"><i class="icon ion-chatboxes"></i> &nbsp;23 reviews</span>
             </div>
-            <div class="recipe-desc">
-              <%= link_to recipe_path(recipe.id) do %>
-                <h3><%= recipe.name.capitalize %></h3>
-              <% end %>
-              <div class="actions">
-                <span class="fav"><i class="icon ion-heart"></i> &nbsp;23 favourites</span>
-                <span class="reviews"><i class="icon ion-chatboxes"></i> &nbsp;23 reviews</span>
-              </div>
-            </div>
-          </div>  
+          </div>
+        </div>  
       <% end %>
     </div>
   <% else %>
