--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark custom-nav">
-  <a class="navbar-brand logo" href="">
+  <a class="navbar-brand logo" href="/">
     <%= image_tag("white-logo.png")%>
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,9 +17,6 @@
       </li>
     <% end %>
     <% if logged_in? %>
-      <li class="nav-item">
-        <%= link_to "Categories", categories_path, class: "nav-link" %>
-      </li>
       <li class="nav-item">
         <%= link_to "My Recipes", my_recipes_path, class: "nav-link" %>
       </li>
