feat(HomePageUI): add search bar and footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,10 +26,14 @@
       </script>
     <% end %>
 
-    <%= render 'layouts/navbar' %>
+    <div class="main">
+      <%= render 'layouts/navbar' %>
 
-    <div class="main-content">
-      <%= yield %>
+      <div class="main-content">
+        <%= yield %>
+      </div>
+
+      <%= render 'layouts/footer' %>
     </div>
   </body>
 </html>
