--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,14 @@
 
 html, body {
   font-family: 'Montserrat', sans-serif;
+  width: 100%;
   height: 100%;
+}
+
+.main {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
 
 .logo img {
@@ -43,4 +50,48 @@ textarea {
 label.error, span.error {
   font-size: .9rem;
   color: $red;
+}
+
+.search-wrapper {
+  background-color: #ffffff;
+  padding: 1px 10px;
+  border-radius: 20px;
+  margin-right: 20px;
+
+  input {
+    border: none;
+    outline: none;
+    margin-right: 0 !important;
+    box-shadow: none;
+  }
+
+  i {
+    font-size: 25px;
+    padding-right: 5px;
+    cursor: pointer;
+  }
+}
+
+.footer {
+  width: 100%;
+  height: 60px;
+  line-height: 59px;
+  color: #ffffff;
+  background-color: $dark;
+
+  div {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  img {
+    width: 30px;
+  }
+
+  a {
+    color: white;
+    text-decoration: none;
+    vertical-align: middle;
+    padding-left: 5px;
+  }
 }
