--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark custom-nav">
-  <a class="navbar-brand logo" href="">
+  <a class="navbar-brand logo" href="/">
     <%= image_tag("white-logo.png")%>
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,31 +7,36 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto">
     <% unless logged_in? %>
-      <li class="nav-item">
-        <%= link_to "Sign In", login_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Register", register_path, class: "nav-link" %>
-      </li>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <%= link_to "Sign In", login_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Register", register_path, class: "nav-link" %>
+        </li>
+      </ul>
     <% end %>
     <% if logged_in? %>
-      <li class="nav-item">
-        <%= link_to "Categories", categories_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "My Recipes", my_recipes_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Hi, <%= current_user.username.capitalize %>
-        </a>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-          <%= link_to "Logout", logout_path, class: "dropdown-item" %>
-        </div>
-      </li>
+      <div class="search-wrapper ml-auto">
+        <form class="form-inline">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <i class="icon ion-search"></i>
+        </form>
+      </div>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <%= link_to "My Recipes", my_recipes_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Hi, <%= current_user.username.capitalize %>
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+            <%= link_to "Logout", logout_path, class: "dropdown-item" %>
+          </div>
+        </li>
+      </ul>
     <% end %>
-    </ul>
   </div>
 </nav>
