Change 404 message when viewing recipe details

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,4 +1,4 @@
 <div class="mt-5">
-  <h1 class="no-recipes text-center">Hey there, this page is under maintenance. Please check back later.</h1>
+  <h1 class="no-recipes text-center">Ooops! This page got lost in the kitchen. We hope to find it soon.</h1>
   <h3 class="text-center">¯\_(ツ)_/¯</h3>
 </div>
